--- a/src/sass/components/_initial.scss
+++ b/src/sass/components/_initial.scss
@@ -12,12 +12,19 @@ html{
 }
 
 body {
+  position: relative;
   font-family: $primary-font;
   font-size: $font-size;
   color: $font-color;
   width: 100%;
   margin: 0;
   background: $body-bg-color;
+  height: 100%;
+}
+
+.app-wrapper{
+  position: absolute;
+  width: 100%;
   height: 100%;
   overflow: hidden;
 }
